tree-sitter-lexd/test/corpus/regex.txt
============
simple regex
============

PATTERNS
X

LEXICON X
/abc:def(def)?a:b/

---

(source_file
  (pattern_block
    (pattern_start)
    (pattern_line
      (pattern_token whole: (lexicon_reference name: (identifier)))))
  (lexicon_block
    (lexicon_start)
    name: (identifier)
    (lexicon_line
      (lexicon_segment
        whole: (regex
          (regex_line (regex_string) (colon) (regex_string))
          (regex_group
            (regex_line (regex_string))
            (pattern_operator (question_op)))
          (regex_line (regex_string) (colon) (regex_string)))))))
