tree-sitter-lexd/test/corpus/sequential_lexicon.txt
===================
sequential lexicons
===================

PATTERNS
X Y

LEXICON X
a
b
c

LEXICON Y
a
b
c

---

(source_file
  (pattern_block
    (pattern_start)
    (pattern_line
      (pattern_token whole: (lexicon_reference name: (identifier)))
      (pattern_token whole: (lexicon_reference name: (identifier)))))
  (lexicon_block
    (lexicon_start)
    name: (identifier)
    (lexicon_line
      (lexicon_segment whole: (lexicon_string)))
    (lexicon_line
      (lexicon_segment whole: (lexicon_string)))
    (lexicon_line
      (lexicon_segment whole: (lexicon_string))))
  (lexicon_block
    (lexicon_start)
    name: (identifier)
    (lexicon_line
      (lexicon_segment whole: (lexicon_string)))
    (lexicon_line
      (lexicon_segment whole: (lexicon_string)))
    (lexicon_line
      (lexicon_segment whole: (lexicon_string)))))
