tree-sitter-lexd/test/corpus/spacing.txt
================
patterns with just lexicons
================

PATTERNS
X
X Y
X Y Z
X: Y :X
:X Y X:
:X :X

---

(source_file
  (pattern_block
    (pattern_start)
    (pattern_line (pattern_token whole: (lexicon_reference name: (identifier))))
    (pattern_line
      (pattern_token whole: (lexicon_reference name: (identifier)))
      (pattern_token whole: (lexicon_reference name: (identifier))))
    (pattern_line
      (pattern_token whole: (lexicon_reference name: (identifier)))
      (pattern_token whole: (lexicon_reference name: (identifier)))
      (pattern_token whole: (lexicon_reference name: (identifier))))
    (pattern_line
      (pattern_token left: (lexicon_reference name: (identifier)) (colon))
      (pattern_token whole: (lexicon_reference name: (identifier)))
      (pattern_token (colon) right: (lexicon_reference name: (identifier))))
    (pattern_line
      (pattern_token (colon) right: (lexicon_reference name: (identifier)))
      (pattern_token whole: (lexicon_reference name: (identifier)))
      (pattern_token left: (lexicon_reference name: (identifier)) (colon)))
    (pattern_line
      (pattern_token (colon) right: (lexicon_reference name: (identifier)))
      (pattern_token (colon) right: (lexicon_reference name: (identifier))))))

================
options
================

PATTERNS
X | Y
X | Y | Z
X|Y
X|Y|Z
X |Y
X| Y

---

(source_file
  (pattern_block
    (pattern_start)
    (pattern_line
      (pattern_option
        (pattern_token whole: (lexicon_reference name: (identifier)))
        (pattern_or)
        (pattern_token whole: (lexicon_reference name: (identifier)))))
    (pattern_line
      (pattern_option
        (pattern_token whole: (lexicon_reference name: (identifier)))
        (pattern_or)
        (pattern_token whole: (lexicon_reference name: (identifier)))
        (pattern_or)
        (pattern_token whole: (lexicon_reference name: (identifier)))))
    (pattern_line
      (pattern_option
        (pattern_token whole: (lexicon_reference name: (identifier)))
        (pattern_or)
        (pattern_token whole: (lexicon_reference name: (identifier)))))
    (pattern_line
      (pattern_option
        (pattern_token whole: (lexicon_reference name: (identifier)))
        (pattern_or)
        (pattern_token whole: (lexicon_reference name: (identifier)))
        (pattern_or)
        (pattern_token whole: (lexicon_reference name: (identifier)))))
    (pattern_line
      (pattern_option
        (pattern_token whole: (lexicon_reference name: (identifier)))
        (pattern_or)
        (pattern_token whole: (lexicon_reference name: (identifier)))))
    (pattern_line
      (pattern_option
        (pattern_token whole: (lexicon_reference name: (identifier)))
        (pattern_or)
        (pattern_token whole: (lexicon_reference name: (identifier)))))))

================
anonymous patterns
================

PATTERNS
(X)
( X)
(X )
( X )
(X) (Y)
( X (Y (Z)))

---

(source_file
  (pattern_block
    (pattern_start)
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_token whole: (lexicon_reference name: (identifier))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_token whole: (lexicon_reference name: (identifier))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_token whole: (lexicon_reference name: (identifier))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_token whole: (lexicon_reference name: (identifier))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_token whole: (lexicon_reference name: (identifier)))))
      (pattern_token
        whole: (anonymous_pattern
          (pattern_token whole: (lexicon_reference name: (identifier))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_token whole: (lexicon_reference name: (identifier)))
          (pattern_token
            whole: (anonymous_pattern
              (pattern_token whole: (lexicon_reference name: (identifier)))
              (pattern_token
                whole: (anonymous_pattern
                  (pattern_token whole: (lexicon_reference name: (identifier))))))))))))

================
options and anonymous
================

PATTERNS
(X|Y)
(X|Y|Z)
(X|Y )
( X|Y)
( X|Y )
( X | Y )
(X | Y)

---

(source_file
  (pattern_block
    (pattern_start)
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_option
            (pattern_token whole: (lexicon_reference name: (identifier)))
            (pattern_or)
            (pattern_token whole: (lexicon_reference name: (identifier)))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_option
            (pattern_token whole: (lexicon_reference name: (identifier)))
            (pattern_or)
            (pattern_token whole: (lexicon_reference name: (identifier)))
            (pattern_or)
            (pattern_token whole: (lexicon_reference name: (identifier)))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_option
            (pattern_token whole: (lexicon_reference name: (identifier)))
            (pattern_or)
            (pattern_token whole: (lexicon_reference name: (identifier)))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_option
            (pattern_token whole: (lexicon_reference name: (identifier)))
            (pattern_or)
            (pattern_token whole: (lexicon_reference name: (identifier)))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_option
            (pattern_token whole: (lexicon_reference name: (identifier)))
            (pattern_or)
            (pattern_token whole: (lexicon_reference name: (identifier)))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_option
            (pattern_token whole: (lexicon_reference name: (identifier)))
            (pattern_or)
            (pattern_token whole: (lexicon_reference name: (identifier)))))))
    (pattern_line
      (pattern_token
        whole: (anonymous_pattern
          (pattern_option
            (pattern_token whole: (lexicon_reference name: (identifier)))
            (pattern_or)
            (pattern_token whole: (lexicon_reference name: (identifier)))))))))
