tree-sitter-lexd/test/corpus/whatever.txt
================
lexd test
================

PATTERNS
W X(2) < Y # comment

PATTERN Y
[a] Z

LEXICON X(3)
a:a b :q
j: d v

LEXICON W
a\ b

---

(source_file
  (pattern_block
    (pattern_start)
    (pattern_line
      (pattern_token whole: (lexicon_reference name: (identifier)))
      (pattern_token
        whole: (lexicon_reference
          name: (identifier)
          column: (number)))
      (left_sieve)
      (pattern_token whole: (lexicon_reference name: (identifier)))
      comment: (comment)))
  (pattern_block
    (named_pattern_start)
    name: (identifier)
    (pattern_line
      (pattern_token
        whole: (anonymous_lexicon
          (lexicon_segment whole: (lexicon_string))))
      (pattern_token whole: (lexicon_reference name: (identifier)))))
  (lexicon_block
    (lexicon_start)
    name: (identifier)
    columns: (number)
    (lexicon_line
      (lexicon_segment
        left: (lexicon_string)
        (colon)
        right: (lexicon_string))
      (lexicon_segment
        whole: (lexicon_string))
      (lexicon_segment
        (colon)
        right: (lexicon_string)))
    (lexicon_line
      (lexicon_segment
        left: (lexicon_string)
        (colon))
      (lexicon_segment
        whole: (lexicon_string))
      (lexicon_segment
        whole: (lexicon_string))))
  (lexicon_block
    (lexicon_start)
    name: (identifier)
    (lexicon_line
      (lexicon_segment
        whole: (lexicon_string)
        whole: (escaped_char)
        whole: (lexicon_string)))))
